--- a/index.html
+++ b/index.html
@@ -29,32 +29,32 @@
         <div class="card">
           <h3>CCNA: Enterprise Networking</h3>
           <p>Cisco - Dic 2024</p>
-          <a href="_certificate_21151027-aguascalientes-tecnm-mx_2e114abc-c728-45ae-8695-96f7364b3e5a.pdf" target="_blank">Ver certificado</a>
+          <a href="certificados/_certificate_21151027-aguascalientes-tecnm-mx_2e114abc-c728-45ae-8695-96f7364b3e5a.pdf" target="_blank">Ver certificado</a>
         </div>
         <div class="card">
           <h3>Network Security</h3>
           <p>Cisco - Mayo 2025</p>
-          <a href="_certificate_21151027-aguascalientes-tecnm-mx_8233848e-3e0b-4dea-bc83-2de9b187e36c.pdf" target="_blank">Ver certificado</a>
+          <a href="certificados/_certificate_21151027-aguascalientes-tecnm-mx_8233848e-3e0b-4dea-bc83-2de9b187e36c.pdf" target="_blank">Ver certificado</a>
         </div>
         <div class="card">
           <h3>Introducción a la Ciencia de Datos</h3>
           <p>Cisco - Oct 2023</p>
-          <a href="Introduction_to_Data_Science_certificate_21151027-aguascalientes-tecnm-mx_9cd21a7f-4e0b-4d2f-b020-b16cfff7b7e1.pdf" target="_blank">Ver certificado</a>
+          <a href="certificados/Introduction_to_Data_Science_certificate_21151027-aguascalientes-tecnm-mx_9cd21a7f-4e0b-4d2f-b020-b16cfff7b7e1.pdf" target="_blank">Ver certificado</a>
         </div>
         <div class="card">
           <h3>NDG Linux Unhatched</h3>
           <p>Cisco - Dic 2024</p>
-          <a href="Linux_Unhatched_certificate_21151027-aguascalientes-tecnm-mx_fb841457-d1d5-450e-859f-674858c707bc.pdf" target="_blank">Ver certificado</a>
+          <a href="certificados/Linux_Unhatched_certificate_21151027-aguascalientes-tecnm-mx_fb841457-d1d5-450e-859f-674858c707bc.pdf" target="_blank">Ver certificado</a>
         </div>
         <div class="card">
           <h3>Primer Respondiente</h3>
           <p>Fundación Carlos Slim - Sep 2023</p>
-          <a href="Indicador de Alcance 1.D Constancia de Curso en Línea edX, Google, Cursera.pdf" target="_blank">Ver certificado</a>
+          <a href="certificados/Indicador de Alcance 1.D Constancia de Curso en Línea edX, Google, Cursera.pdf" target="_blank">Ver certificado</a>
         </div>
         <div class="card">
           <h3>Linux Unhatched (versión internacional)</h3>
           <p>Cisco - Dic 2024</p>
-          <a href="LinuxUnhatched20241211-26-qibtav.pdf" target="_blank">Ver certificado</a>
+          <a href="certificados/LinuxUnhatched20241211-26-qibtav.pdf" target="_blank">Ver certificado</a>
         </div>
       </div>
     </section>
