--- a/index.html
+++ b/index.html
@@ -27,53 +27,41 @@
       <h2><i class="fas fa-award"></i> Cursos Realizados</h2>
       <div class="cards fade-in">
         <div class="card">
-          <h3>CCNA: Enterprise Networking</h3>
+          <h3>1. CCNA: Enterprise Networking</h3>
           <p>Cisco - Dic 2024</p>
-          <a href="certificados/_certificate_21151027-aguascalientes-tecnm-mx_2e114abc-c728-45ae-8695-96f7364b3e5a.pdf" target="_blank">Ver certificado</a>
+          <a href="certificados/1.pdf" target="_blank">Ver certificado</a>
         </div>
         <div class="card">
-          <h3>Network Security</h3>
+          <h3>2. Network Security</h3>
           <p>Cisco - Mayo 2025</p>
-          <a href="certificados/_certificate_21151027-aguascalientes-tecnm-mx_8233848e-3e0b-4dea-bc83-2de9b187e36c.pdf" target="_blank">Ver certificado</a>
+          <a href="certificados/2.pdf" target="_blank">Ver certificado</a>
         </div>
         <div class="card">
-          <h3>Introducción a la Ciencia de Datos</h3>
-          <p>Cisco - Oct 2023</p>
-          <a href="certificados/Introduction_to_Data_Science_certificate_21151027-aguascalientes-tecnm-mx_9cd21a7f-4e0b-4d2f-b020-b16cfff7b7e1.pdf" target="_blank">Ver certificado</a>
+          <h3>3. Documento adicional</h3>
+          <p>Datos internos</p>
+          <a href="certificados/3.pdf" target="_blank">Ver certificado</a>
         </div>
         <div class="card">
-          <h3>NDG Linux Unhatched</h3>
-          <p>Cisco - Dic 2024</p>
-          <a href="certificados/Linux_Unhatched_certificate_21151027-aguascalientes-tecnm-mx_fb841457-d1d5-450e-859f-674858c707bc.pdf" target="_blank">Ver certificado</a>
-        </div>
-        <div class="card">
-          <h3>Primer Respondiente</h3>
+          <h3>4. Primer Respondiente</h3>
           <p>Fundación Carlos Slim - Sep 2023</p>
-          <a href="certificados/Indicador de Alcance 1.D Constancia de Curso en Línea edX, Google, Cursera.pdf" target="_blank">Ver certificado</a>
+          <a href="certificados/4.pdf" target="_blank">Ver certificado</a>
         </div>
         <div class="card">
-          <h3>Linux Unhatched (versión internacional)</h3>
+          <h3>5. Introducción a la Ciencia de Datos</h3>
+          <p>Cisco - Oct 2023</p>
+          <a href="certificados/5.pdf" target="_blank">Ver certificado</a>
+        </div>
+        <div class="card">
+          <h3>6. NDG Linux Unhatched</h3>
           <p>Cisco - Dic 2024</p>
-          <a href="certificados/LinuxUnhatched20241211-26-qibtav.pdf" target="_blank">Ver certificado</a>
+          <a href="certificados/6.pdf" target="_blank">Ver certificado</a>
+        </div>
+        <div class="card">
+          <h3>7. Linux Unhatched (versión internacional)</h3>
+          <p>Cisco - Dic 2024</p>
+          <a href="certificados/7.pdf" target="_blank">Ver certificado</a>
         </div>
       </div>
-    </section>
-
-    <section>
-      <h2><i class="fas fa-briefcase"></i> Experiencia</h2>
-      <ul class="fade-in">
-        <li><strong>Desarrollador Full Stack</strong> en TechCompany (2024 - Presente)</li>
-        <li><strong>Prácticas Profesionales</strong> en Proyecto Cloud ITA (2023)</li>
-      </ul>
-    </section>
-
-    <section>
-      <h2><i class="fas fa-cogs"></i> Habilidades</h2>
-      <ul class="fade-in">
-        <li>Desarrollo Web (HTML, CSS, JavaScript, Laravel)</li>
-        <li>Automatización con Python</li>
-        <li>Linux, Redes, Seguridad</li>
-      </ul>
     </section>
 
     <footer>
